# python-ipfabric-diagrams

./: CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  release.yml  slack-notification.yml  slack-release.yml
examples/: graph_result_model.py  host2gw_diagram.py  multicast_diagram.py  network_diagram.py  security_matrix.py  unicast_diagram.py
ipfabric_diagrams/: __init__.py  defaultGraphSettings.json  graph_parameters.py  graph_settings.py  graphs.py  icmp.py  models.py  parameters.py
ipfabric_diagrams/input_models/: constants.py  graph_parameters.py  graph_settings.py
ipfabric_diagrams/input_models/factory_defaults/: networkSettings.json  pathLookupSettings.json
ipfabric_diagrams/output_models/: graph_result.py  packet.py  protocols.py  trace.py
tests/functional/: test_graphs.py
tests/unittests/: network.json  pathlookup.json  test_graph_parameters.py  test_graph_settings.py  test_graphs.py
tests/unittests/input_models/: test_graph_parameters.py  test_graph_settings.py
